# datumaro

./: CHANGELOG.md  debug_run.py  offline-search-index.c71820ce582012a377aa59f99936fdca.json  pyproject.toml  requirements-core.txt  setup.py
.github/workflows/: github_pages.yml  pr_checks.yml
api/: index.html
api/develop/: search.html
api/v0.2.3/.doctrees/: index.doctree
api/v0.3/.doctrees/: environment.pickle
datumaro/: __init__.py
datumaro/cli/: __main__.py
datumaro/cli/commands/: explain.py  info.py
datumaro/components/: annotation.py  cli_plugin.py  dataset.py  environment.py  errors.py  extractor.py  operations.py  project.py  wrappers.py
datumaro/components/algorithms/: rise.py
datumaro/plugins/: camvid_format.py  cityscapes_format.py  lfw_format.py  mot_format.py  transforms.py
datumaro/util/: __init__.py  annotation_util.py  image.py  mask_tools.py  meta_file_util.py  os_util.py  test_utils.py
docs/: index.html
docs/_print/: index.html
docs/contributing/: index.html
docs/design/: index.html
docs/formats/: index.html
docs/getting_started/: index.html
docs/plugins/: index.html
docs/release_notes/: index.html
docs/user-manual/: index.html
page_404/: index.html
search/: index.html
site/: build_docs.py
tests/: conftest.py  test_ade20k2017_format.py  test_ade20k2020_format.py  test_align_celeba_format.py  test_annotation_util.py  test_brats_format.py  test_brats_numpy_format.py  test_camvid_format.py  test_celeba_format.py  test_cifar_format.py  test_cityscapes_format.py  test_coco_format.py  test_common_semantic_segmentation_format.py  test_common_super_resolution_format.py  test_config.py  test_cvat_format.py  test_dataset.py  test_datumaro_format.py  test_diff.py  test_extractor_tfds.py  test_fractal_image_generator.py  test_icdar_format.py  test_image.py  test_image_dir_format.py  test_image_zip_format.py  test_imagenet_format.py  test_imagenet_txt_format.py  test_images.py  test_kinetics_format.py  test_kitti_format.py  test_label_categories.py  test_labelme_format.py  test_lfw_format.py  test_mapillary_vistas_format.py  test_market1501_format.py  test_mars_format.py  test_masks.py  test_mnist_csv_format.py  test_mnist_format.py  test_mot_format.py  (+22 more)
tests/cli/: test_describe_downloads.py  test_detect_format.py  test_diff.py  test_download.py  test_explain.py  test_filter.py  test_generator.py  test_image_zip_format.py  test_info.py  test_kitti_raw_format.py  test_merge.py  test_patch.py  test_project.py  test_revpath.py  test_sly_point_cloud_format.py  test_transform.py  test_utils.py  test_video.py  test_voc_format.py  test_yolo_format.py
tests/unit/: test_ade20k2017_format.py  test_ade20k2020_format.py  test_align_celeba_format.py  test_annotation_util.py  test_api.py  test_brats_format.py  test_brats_numpy_format.py  test_camvid_format.py  test_celeba_format.py  test_cifar_format.py  test_cityscapes_format.py  test_coco_format.py  test_common_semantic_segmentation_format.py  test_common_super_resolution_format.py  test_compare.py  test_config.py  test_cvat_format.py  test_dataset.py  test_datumaro_format.py  test_fractal_image_generator.py  test_icdar_format.py  test_image.py  test_image_dir_format.py  test_image_zip_format.py  test_imagenet_format.py  test_imagenet_txt_format.py  test_images.py  test_kinetics_format.py  test_kitti_format.py  test_kitti_raw_format.py  test_labelme_format.py  test_lfw_format.py  test_market1501_format.py  test_mars_format.py  test_masks.py  test_mnist_csv_format.py  test_mnist_format.py  test_mot_format.py  test_mots_format.py  test_mpii_format.py  (+20 more)
tests/utils/: test_utils.py
v0.1.11/api/: objects.inv  search.html  searchindex.js
v0.1.11/docs/: index.html
v0.1.11/page_404/: index.html
v0.1.11/search/: index.html
v0.2.1/api/: py-modindex.html
v0.2.1/docs/: index.html
v0.2.1/page_404/: index.html
v0.2.1/search/: index.html
v0.2.2/api/: genindex.html
v0.2.2/docs/: index.html
v0.2.2/page_404/: index.html
v0.2.2/search/: index.html
v0.2.3/docs/: index.html
v0.2.3/page_404/: index.html
v0.2.3/search/: index.html
v0.2/docs/: index.html
v0.2/page_404/: index.html
v0.2/search/: index.html
v0.3/docs/: index.html
v0.3/page_404/: index.html
v0.3/search/: index.html
(+1632 files in other folders)
